# crowdsh

./: LICENSE_PRO.md  README.md  pyproject.toml
.github/workflows/: python-releaser.yml
crowdsh/: __init__.py
tests/: test_crowdsh.py
