[tool.poetry]
name = "crowdsh"
version = "0.1.0"
readme = "README.md"
homepage = "https://crowd.sh"
description = ""
authors = ["Abhi Yerra <abhi@berkeley.edu>"]

[tool.poetry.dependencies]
python = "^3.10"
yattag = "^1.14.0"
pynamodb = "^5.2.1"
bs4 = "^0.0.1"
bleach = "^5.0.1"
airtable-python-wrapper = "^0.15.3"
boto3 = "^1.24.88"
markdown2 = "^2.4.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
